# limit-order-book

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/core/: constants.hpp  types.hpp
include/lob/core/: compiler_hints.hpp  constants.hpp  events.hpp  order.hpp  price_level.hpp  types.hpp
include/lob/memory/: pool_allocator.hpp
tests/: CMakeLists.txt
tests/unit/: test_events.cpp  test_pool_allocator.cpp  test_price_level.cpp  test_types.cpp
